--- a/stlyes/globals.css
+++ b/stlyes/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --authformYellow: #fdc530;
+}
+
+.custom_shadow {
+  box-shadow: -3px 5px 0px var(--authformYellow);
+}
