--- a/stlyes/globals.css
+++ b/stlyes/globals.css
@@ -94,3 +94,25 @@
 .custom-scrollbar::-webkit-scrollbar-track {
   background: transparent; /* Background of the scrollbar track */
 }
+
+.dropdown-enter {
+  opacity: 0;
+  transform: scaleY(0);
+}
+
+.dropdown-enter-active {
+  opacity: 1;
+  transform: scaleY(1);
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.dropdown-exit {
+  opacity: 1;
+  transform: scaleY(1);
+}
+
+.dropdown-exit-active {
+  opacity: 0;
+  transform: scaleY(0);
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
