--- a/stlyes/globals.css
+++ b/stlyes/globals.css
@@ -116,3 +116,18 @@
   transform: scaleY(0);
   transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
+
+@keyframes riseAndFadeIn {
+  0% {
+    transform: translateY(20px);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.rise-and-fade {
+  animation: riseAndFadeIn 0.4s ease-out forwards;
+}
